# als_parser_rs

./: .gitignore  Cargo.toml  Dying  IdealOutput.txt  README.md  Tester.js  Tutorial  main.rs  output.json
@napi-rs/parser/: .gitattributes  Cargo.toml  browser.js  index.d.ts  index.js  package-lock.json  package.json  parser.wasi-browser.js  parser.wasi.cjs
@napi-rs/parser/src/: lib.rs
src/: main.rs
