[package]
name = "als-parser"
version = "0.1.0"
edition = "2021"

[lib]
# This is crucial: it tells Rust to build a dynamic library for Node.js
crate-type = ["cdylib"]

[dependencies]
# N-API dependencies
napi = { version = "2.12.2", default-features = false, features = ["serde-json"] }
napi-derive = "2.12.2"

# Your logic dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.31"
flate2 = "1.0"

[build-dependencies]
napi-build = "2.0.1"